tests/errors/rewind_invalid_kwarg1.f90
program rewind_invalid_kwarg1
    ! "end" is an invalid keyword argument for "REWIND"
    rewind(end="world")
end program
